--- a/src/app/course-details/course-details.component.html
+++ b/src/app/course-details/course-details.component.html
@@ -1,14 +1,19 @@
 <div class="course-details">
   <div class="course-header">
-    <img [src]="courseDetails?.imageUrl" />
-    <h1>{{ courseDetails?.courseName }}</h1>
+    <img [src]="courseDetails.imageUrl" />
+    <h1>{{ courseDetails.courseName }}</h1>
   </div>
 
   <div class="lessons-list">
     <ul *ngIf="courseDetails?.lessonDTOList">
       <li *ngFor="let lesson of courseDetails.lessonDTOList">
         <p>{{ lesson.name }}</p>
-        <button *ngIf="isUserProfessor()" (click)="removeLessonFromCourse(lesson.id || null)">Delete Lesson From Course</button>
+        <button
+          *ngIf="isUserProfessor()"
+          (click)="removeLessonFromCourse(lesson.id || null)"
+        >
+          Delete Lesson From Course
+        </button>
       </li>
     </ul>
     <p *ngIf="!courseDetails?.lessonDTOList">
