--- a/src/app/course-details/course-details.component.html
+++ b/src/app/course-details/course-details.component.html
@@ -1,7 +1,7 @@
 <div class="course-details">
   <div class="course-header">
-    <img [src]="courseDetails.imageUrl" />
-    <h1>{{ courseDetails.courseName }}</h1>
+    <img [src]="courseDetails?.imageUrl" />
+    <h1>{{ courseDetails?.courseName }}</h1>
   </div>
 
   <div class="lessons-list">
