fix: remove add lessons button from course-details if user is student

--- a/src/app/course-details/course-details.component.html
+++ b/src/app/course-details/course-details.component.html
@@ -25,7 +25,9 @@
   </div>
 </div>
 
-<button (click)="displayAllLessonsList()">Add More Lessons</button>
+<button *ngIf="isUserProfessor()" (click)="displayAllLessonsList()">
+  Add More Lessons
+</button>
 <app-lessons-list
   *ngIf="displayAvailableLessonList"
   [courseDetails]="courseDetails"
