refactor auth files and names to user; add interfaces; add check if enrolled and enroll user functionalities

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
             Curriculum details
           </button>
           <button
-            *ngIf="isUserStudent() && !isUserEnrolled()"
+            *ngIf="isUserStudent() && !isUserEnrolled(course.courseId)"
             mat-button
             (click)="enrollUser(course.courseId)"
           >
