--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-content">
-  <button *ngIf="isLoggedIn()" (click)="logoutUser()">Logout</button>
-  <button *ngIf="isLoggedIn()" (click)="goToDashboard()">Dashboard</button>
+  <button *ngIf="isLoggedIn" (click)="logoutUser()">Logout</button>
+  <button *ngIf="isLoggedIn" (click)="goToDashboard()">Dashboard</button>
 </div>
