add admin state and actions; add and integrate getAllUsers call

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,5 @@
-<p>admin works!</p>
+<div *ngIf="users$ | async as users">
+  <mat-card *ngFor="let user of users">
+    {{ user.userName }}
+  </mat-card>
+</div>
