--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,12 @@
+<ngx-spinner
+  bdColor="rgb(48,213,200)"
+  size="medium"
+  color="#fff"
+  type="pacman"
+  [fullScreen]="true"
+>
+  <p style="color: white">Loading...</p>
+</ngx-spinner>
 <div *ngIf="users$ | async as users">
   <mat-card *ngFor="let user of users">
     {{ user.userName }}
