implement admin view; add updateUserRole functionality; move user related actions to user state

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -32,7 +32,7 @@ app-dashboard {
       max-width: 65%;
       align-self: center;
       button {
-        background-color: lightseagreen;
+        background-color: #20b2aa;
       }
     }
   }
