--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -4,10 +4,10 @@
   flex-direction: column;
 
   .add-user {
-    margin: 20px;
+    margin: 30px 0;
+    margin-left: 5%;
     align-self: center;
-    width: 100%;
-    width: 90%;
+    align-self: flex-start;
   }
 
   .users-list {
