fix register to not require token; add clearRegisteredUser; add register navigation to header if user isn't logged in

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 <div class="header-content">
   <button *ngIf="isLoggedIn()" (click)="logoutUser()">Logout</button>
   <button *ngIf="isLoggedIn()" (click)="goToDashboard()">Dashboard</button>
+  <!-- <button *ngIf="isRegisterPage()" (click)="goToLogin()">Go To Login</button> -->
+  <button mat-raised-button *ngIf="!isLoggedIn()" (click)="goToRegister()">Register</button>
 </div>
