--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -23,7 +23,7 @@
       >
         <div class="user-info">
           <p>{{ user.userName }}</p>
-          <button mat-raised-button (click)="deleteUser(user.id)">Delete User</button>
+          <button mat-raised-button color="warn" (click)="onDeleteUser(user)">Delete User</button>
         </div>
         <mat-expansion-panel
           class="role-selection"
