--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,23 @@
-main {
+@import "./core/shared/styles/variables";
+
+app-root {
+  main {
     margin: 0 auto;
     max-width: 80vw;
+    position: absolute;
+    left: 0;
+    app-header {
+      background-color: $nt-charcoal;
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      z-index: 100;
+      width: -webkit-fill-available;
+    }
+    .main-content {
+      display: flex;
+      width: 100vw;
+      margin-top: 100px;
+    }
+  }
 }
