--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div> -->
   <mat-card>
     <form [formGroup]="loginForm" autocomplete="off">
       <mat-form-field>
@@ -16,4 +16,4 @@
       <button mat-button (click)="loginUser()">{{ 'login.button' | translate }}</button> 
     </form>
   </mat-card>
-</div>
+<!-- </div> -->
