--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -5,37 +5,67 @@ app-dashboard {
     display: flex;
     flex-wrap: wrap;
   }
+  .mat-mdc-card-content {
+    display: inline;
+  }
 
-  mat-card {
-    display: flex;
-    flex-flow: column row;
-    justify-content: space-between;
-    max-width: 45%;
-    margin: 10px 20px;
-    &.mdc-card {
-      flex-direction: row;
-    }
-    &.mat-mdc-card {
-      border: thick double #32a1ce;
-    }
+  .info-card {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    // grid-template-rows: repeat(3, 10vw);
+    grid-template-rows: 1fr 1fr 1fr;
+    margin-bottom: 20px;
+    // justify-content: space-around;
 
-    .course-info {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      max-width: 33%;
-      img {
-        max-width: -webkit-fill-available;
+    .name-cell {
+      display: inline-grid;
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 1;
+      grid-row-end: 1;
+      justify-self: center;
+    }
+    .img-cell {
+      display: inline-grid;
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 2;
+      grid-row-end: span 3;
+
+      .course-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
       }
+    }
+    .description-cell {
+      display: inline-grid;
+      grid-column-start: 2;
+      grid-column-end: span 3;
+      grid-row-start: 1;
+      grid-row-end: span 2;
+      justify-self: center;
       align-self: center;
     }
 
-    .course-content {
-      max-width: 65%;
-      align-self: center;
-      button {
-        background-color: $nt-strong-turquoise;
-      }
+    .btn-details {
+      display: inline-grid;
+      grid-column-start: 3;
+      grid-column-end: 3;
+      grid-row-start: 3;
+      grid-row-end: 3;
+      justify-self: center;
+    }
+
+    .btn-enroll,
+    .btn-disenroll {
+      display: inline-grid;
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 3;
+      grid-row-end: 3;
+      justify-self: center;
     }
   }
 }
