--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
   <p style="color: white">Loading...</p>
 </ngx-spinner>
 <div class="admin-container">
-  <button class="add-user" mat-button-raised [routerLink]="['/register']">
+  <button class="add-user" mat-button [routerLink]="['/register']">
     Add new User
   </button>
   <div class="users-list" *ngIf="users$ | async as users">
