--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-content">
-  <button *ngIf="isLoggedIn()" (click)="logoutUser()">Logout</button>
-  <button *ngIf="isLoggedIn()" (click)="goToDashboard()">Dashboard</button>
+  <button mat-button *ngIf="isLoggedIn()" (click)="logoutUser()">Logout</button>
+  <button mat-button *ngIf="isLoggedIn()" (click)="goToDashboard()">Dashboard</button>
   <!-- <button *ngIf="isRegisterPage()" (click)="goToLogin()">Go To Login</button> -->
-  <button mat-raised-button *ngIf="!isLoggedIn()" (click)="goToRegister()">Register</button>
+  <button mat-button *ngIf="!isLoggedIn()" (click)="goToRegister()">Register</button>
 </div>
