--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
           <mat-error *ngIf="loginForm.get('password')?.hasError('required')">{{ 'login.passwordRequired' | translate }}
           </mat-error>
       </mat-form-field>
-      <button mat-button (click)="loginUser()">{{ 'login.button' | translate }}</button> 
+      <button class="login-btn" mat-button (click)="loginUser()">{{ 'login.button' | translate }}</button> 
     </form>
   </mat-card>
 <!-- </div> -->
