--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "../core/shared/styles/variables";
+
 app-login {
   max-width: 80vw;
   width: inherit;
@@ -19,4 +21,18 @@ app-login {
       }
     }
   }
+
+  .login-btn {
+    margin-bottom: 10px;
+    &:hover {
+      background: $nt-dirty-white;
+      color: $nt-turquoise;
+    }
+  
+    .mat-mdc-button-touch-target {
+      background: $nt-dirty-white;
+    }
+  }
+
+
 }
