style course details component

--- a/src/app/core/shared/styles/_variables.scss
+++ b/src/app/core/shared/styles/_variables.scss
@@ -9,4 +9,5 @@ $nt-green: #0e4946;
 $nt-grey: #c9c9c9;
 $nt-light-grey: #ededed;
 $nt-dirty-white: #f6f6f6;
+$nt-white: #ffffff;
 $nt-charcoal: #28282e;
