--- a/src/app/course-details/course-details.component.html
+++ b/src/app/course-details/course-details.component.html
@@ -8,20 +8,39 @@
   <p style="color: white">Loading...</p>
 </ngx-spinner>
 <div *ngIf="courseDetails$ | async as courseDetails">
-  <div class="course-details">
-    <div class="course-header">
-      <img [src]="courseDetails.imageUrl" />
-      <h1>{{ courseDetails.courseName }}</h1>
-      <button *ngIf="isUserProfessor()" (click)="deleteCourse()">
-        Delete Course
-      </button>
-    </div>
+  <mat-card class="course-details">
+    <figure class="img-cell">
+      <img class="details-img" [src]="courseDetails.imageUrl" />
+    </figure>
+    <h1 class="name-cell">{{ courseDetails.courseName }}</h1>
+    <article class="description-cell">
+      <p>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum."
+      </p>
+    </article>
+    <button
+      mat-raised-button
+      class="btn-delete"
+      *ngIf="isUserProfessor()"
+      (click)="deleteCourse()"
+    >
+      Delete Course
+    </button>
 
     <div class="lessons-list">
+      <h3>Course Lessons:</h3>
       <ul *ngIf="courseDetails.lessonDTOList">
         <li *ngFor="let lesson of courseDetails.lessonDTOList">
           <p>{{ lesson.name }}</p>
           <button
+            mat-raised-button
+            class="delete-lesson-btn"
             *ngIf="isUserProfessor()"
             (click)="removeLessonFromCourse(lesson.id || null)"
           >
@@ -33,9 +52,13 @@
         No lessons for this course, please add some.
       </p>
     </div>
-  </div>
+  </mat-card>
 
-  <button *ngIf="isUserProfessor()" (click)="displayAllLessonsList()">
+  <button
+    mat-raised-button
+    *ngIf="isUserProfessor()"
+    (click)="displayAllLessonsList()"
+  >
     Add More Lessons
   </button>
 </div>
